--- a/JAVA_project/SalaryClient/src/main/resources/com/example/salaryclient/SearchingPage.fxml
+++ b/JAVA_project/SalaryClient/src/main/resources/com/example/salaryclient/SearchingPage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="416.0" prefWidth="700.0" style="-fx-background-color: CC99FF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.salaryclient.Controllers.AdminMenuController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="416.0" prefWidth="700.0" style="-fx-background-color: CC99FF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.salaryclient.SearchingPageController">
    <children>
       <AnchorPane prefHeight="113.0" prefWidth="700.0" style="-fx-background-color: #9966CC;">
          <children>
